--- a/_posts/2018-12-12-yangrui.md
+++ b/_posts/2018-12-12-yangrui.md
@@ -3,7 +3,7 @@ layout: post
 title: 项目小结-杨芮
 categories: Simplewebserver
 description: 基于 Vue.js 仿照 SWAPI 网站进行前端开发
-keywords: Vue,SimpleWebServer
+keywords: 项目小结
 ---
 
 # 模仿swapi的前端开发
