--- a/_posts/2018-12-12-yangrui.md
+++ b/_posts/2018-12-12-yangrui.md
@@ -17,7 +17,7 @@ keywords: 项目小结
 
 ## 开发过程
 ### Vue.js 的数据绑定
-拿主页面来说，当用户输入点击 request 发送一个请求给服务器，服务器会返回 json 数据，我们需要在主页面的浏览框里需要显示服务器返回的数据。Vue.js 提供了很方便的数据动态绑定功能。只要在组件中定义一个 data 属性定义一个自定义的数据叫做 text。然后在标签 pre 中间插入 `{{text}}`，只要text的值改变，相应的在标签里的内容也会改变，从而实现数据绑定。
+拿主页面来说，当用户输入点击 request 发送一个请求给服务器，服务器会返回 json 数据，我们需要在主页面的浏览框里需要显示服务器返回的数据。Vue.js 提供了很方便的数据动态绑定功能。只要在组件中定义一个 data 属性定义一个自定义的数据叫做 text。然后在标签 pre 中间插入 {{text}}，只要text的值改变，相应的在标签里的内容也会改变，从而实现数据绑定。
 
 ```html
 <pre id="interactive_output" class="pre-scrollable">{{text}}</pre>
